[i18n] WorldCasper2: Translatable clone of Casper 2.0, Ghost's default theme
no issue

- WorldCasper2 is Casper 2.0, Ghost's default theme, made translatable
into any language
- for example, in .hbs theme templates:
{{t "Get the latest posts delivered right to your inbox"}}
- the master branch is Casper 2.0
- the translatable branch is i18n-translatable-frontend:
https://github.com/juan-g/WorldCasper2/tree/i18n-translatable-frontend
- for Casper 1.4 made translatable, see WorldCasper1:
https://github.com/juan-g/WorldCasper1/tree/i18n-translatable-frontend
- details in content/translations/README.md, that currently can be seen
at:
https://github.com/juan-g/Ghost/blob/i18n-translatable-
frontend/content/translations/README.md
- see also Ghost's pull request TryGhost/Ghost#8437

--- a/tag.hbs
+++ b/tag.hbs
@@ -12,7 +12,7 @@
                 {{#if description}}
                     {{description}}
                 {{else}}
-                    A collection of {{plural ../pagination.total empty='posts' singular='% post' plural='% posts'}}
+                    {{plural ../pagination.total empty=(t "A collection of posts") singular=(t "A collection of 1 post") plural=(t "A collection of % posts")}}
                 {{/if}}
             </h2>
         </div>
