--- a/post.hbs
+++ b/post.hbs
@@ -39,9 +39,9 @@ into the {body} of the default.hbs template --}}
             {{!-- Email subscribe form at the bottom of the page --}}
             {{#if @labs.subscribers}}
             <section class="subscribe-form">
-                <h3 class="subscribe-form-title">Subscribe to {{@blog.title}}</h3>
-                <p>Get the latest posts delivered right to your inbox</p>
-                {{subscribe_form placeholder="youremail@example.com"}}
+                <h3 class="subscribe-form-title">{{t "Subscribe to"}} {{@blog.title}}</h3>
+                <p>{{t "Get the latest posts delivered right to your inbox"}}</p>
+                {{subscribe_form placeholder=(t "youremail@example.com")}}
             </section>
             {{/if}}
 
@@ -58,12 +58,12 @@ into the {body} of the default.hbs template --}}
                         {{#if bio}}
                             <p>{{bio}}</p>
                         {{else}}
-                            <p>Read <a href="{{url}}">more posts</a> by this author.</p>
+                            <p>{{{t "Read <a href='{url}'>more posts</a> by this author" url=(url)}}}.</p>
                         {{/if}}
                     </section>
                 </section>
                 <div class="post-full-footer-right">
-                    <a class="author-card-button" href="{{url}}">Read More</a>
+                    <a class="author-card-button" href="{{url}}">{{t "Read More"}}</a>
                 </div>
 
                 {{/author}}
@@ -127,7 +127,7 @@ into the {body} of the default.hbs template --}}
                         </ul>
                     </div>
                     <footer class="read-next-card-footer">
-                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty='No posts' singular='% post' plural='See all % posts'}} →</a>
+                        <a href="{{#../primary_tag}}{{url}}{{/../primary_tag}}">{{plural meta.pagination.total empty=(t "No posts") singular=(t "1 post") plural=(t "See all % posts")}} →</a>
                     </footer>
                 </article>
                 {{/if}}
