--- a/default.hbs
+++ b/default.hbs
@@ -49,7 +49,7 @@
                 <img class="subscribe-overlay-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
             {{/if}}
             <h1 class="subscribe-overlay-title">{{t "Subscribe to"}} {{@blog.title}}</h1>
-            <p class="subscribe-overlay-description">{{t "Stay up to date! Get all the latest &amp; greatest posts delivered straight to your inbox"}}</p>
+            <p class="subscribe-overlay-description">{{t "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox"}}</p>
             {{subscribe_form placeholder=(t "youremail@example.com")}}
         </div>
     </div>
