--- a/default.hbs
+++ b/default.hbs
@@ -48,7 +48,7 @@
             {{#if @blog.logo}}
                 <img class="subscribe-overlay-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
             {{/if}}
-            <h1 class="subscribe-overlay-title">{{t "Subscribe to"}} {{@blog.title}}</h1>
+            <h1 class="subscribe-overlay-title">{{t "Subscribe to {blogtitle}" blogtitle=@blog.title}}</h1>
             <p class="subscribe-overlay-description">{{t "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox"}}</p>
             {{subscribe_form placeholder=(t "youremail@example.com")}}
         </div>
