--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -2,7 +2,7 @@
     {{#if prev}}
         <a class="newer-posts" href="{{page_url prev}}"><span aria-hidden="true">&larr;</span> {{t "Newer Posts"}}</a>
     {{/if}}
-    <span class="page-number">{{t "Page"}} {{page}} {{t "of"}} {{pages}}</span>
+    <span class="page-number">{{t "Page {page} of {pages}" page=page pages=pages}}</span>
     {{#if next}}
         <a class="older-posts" href="{{page_url next}}">{{t "Older Posts"}} <span aria-hidden="true">&rarr;</span></a>
     {{/if}}
