--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -35,7 +35,7 @@
             {{/foreach}}
             </ul>
 
-            <span class="reading-time">{{reading_time}}</span>
+            <span class="reading-time">{{reading_time seconds=(t "< 1 min read") minute=(t "1 min read") minutes=(t "% min read")}}</span>
 
         </footer>
     </div>
