[i18n] Updated all translations: New strings, apostrophes...

--- a/subscribe.hbs
+++ b/subscribe.hbs
@@ -62,7 +62,7 @@
                             </header>
 
                             <p>
-                                {{t "You've successfully subscribed to"}} <em>{{@blog.title}}</em>
+                                {{t "You’ve successfully subscribed to"}} <em>{{@blog.title}}</em>
                                 {{t "with the email address"}} <em>{{email}}</em>.
                             </p>
                         {{/if}}
