--- a/error.hbs
+++ b/error.hbs
@@ -21,9 +21,9 @@ You'll notice that we *don't* use any JavsScript, or ghost_head / ghost_foot in 
             <div class="inner">
                 <nav class="site-nav-center">
                     {{#if @blog.logo}}
-                        <a class="site-nav-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>
+                        <a class="site-nav-logo" href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" /></a>
                     {{else}}
-                        <a class="site-nav-logo" href="{{@blog.url}}">{{@blog.title}}</a>
+                        <a class="site-nav-logo" href="{{@site.url}}">{{@site.title}}</a>
                     {{/if}}
                 </nav>
             </div>
@@ -33,9 +33,9 @@ You'll notice that we *don't* use any JavsScript, or ghost_head / ghost_foot in 
             <div class="inner">
 
                 <section class="error-message">
-                    <h1 class="error-code">{{code}}</h1>
+                    <h1 class="error-code">{{error.statusCode}}</h1>
                     <p class="error-description">{{message}}</p>
-                    <a class="error-link" href="{{@blog.url}}">{{t "Go to the front page"}} →</a>
+                    <a class="error-link" href="{{@site.url}}">{{t "Go to the front page"}} →</a>
                 </section>
 
                 {{#if errorDetails}}
