--- a/subscribe.hbs
+++ b/subscribe.hbs
@@ -24,7 +24,7 @@
             <div class="gh-flow">
                 <header class="gh-flow-head">
                     <nav class="gh-flow-nav">
-                        <a href="{{#if subscribed_url}}{{subscribed_url}}{{else}}{{@blog.url}}{{/if}}" class="gh-flow-back">
+                        <a href="{{#if subscribed_url}}{{subscribed_url}}{{else}}{{@site.url}}{{/if}}" class="gh-flow-back">
                             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                             <svg width="17px" height="27px" viewBox="0 0 17 27" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -62,7 +62,7 @@
                             </header>
 
                             <p>
-                                {{t "You’ve successfully subscribed to"}} <em>{{@blog.title}}</em>
+                                {{t "You’ve successfully subscribed to"}} <em>{{@site.title}}</em>
                                 {{t "with the email address"}} <em>{{email}}</em>.
                             </p>
                         {{/if}}
